scss/_patterns_subnav.scss
@import 'settings';

@mixin vf-p-subnav {
  $color-navigation-background: $color-x-light !default;

  .p-subnav {
    position: relative;
  }

  .p-subnav::after {
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    content: '';
    display: block;
    height: $spv-inner--large;
    pointer-events: none;
    position: absolute;
    right: calc(#{$sph-inner--small} + 1px); // 1px for the border on selects. this aligns itr with any selects underneath
    text-indent: calc(100% + 10rem);
    top: $spv-inner--large;
    width: $sph-inner;
  }

  .p-subnav.is-active {
    &::after {
      transform: rotate(180deg);
    }

    .p-subnav__items,
    .p-subnav__items--right {
      display: block;
    }
  }

  // XXX: Fix required because of greedy rule in p-navigation
  // Can be updated with resolution of:
  // https://github.com/canonical-web-and-design/vanilla-framework/issues/2168
  .p-subnav > a {
    padding-right: 2 * $sph-inner--small + map-get($icon-sizes, default); // icon padded with the default padding-right of selects, inputs etc.
  }

  // Theming
  @if ($theme-default-nav == 'dark') {
    .p-subnav::after {
      @include vf-icon-chevron($color-light);
    }

    .p-subnav__item {
      @extend %subnav-item--dark-theme;
    }

    .p-subnav.is-light {
      &::after {
        @include vf-icon-chevron;
      }

      .p-subnav__item {
        @extend %subnav-item--light-theme;
      }
    }
  } @else {
    .p-subnav::after {
      @include vf-icon-chevron($color-mid-light);
    }

    .p-subnav__items,
    .p-subnav__items--right {
      @extend %vf-is-bordered;
    }

    .p-subnav__item {
      @extend %subnav-item--light-theme;
    }

    .p-subnav.is-dark {
      &::after {
        @include vf-icon-chevron;
      }

      .p-subnav__item {
        @extend %subnav-item--dark-theme;
      }
    }
  }

  .p-subnav__items,
  .p-subnav__items--right {
    @extend %vf-has-box-shadow;
    @extend %vf-has-round-corners;
    display: none;
    margin: 0;
    min-width: 100%;
    padding: 0;
    z-index: 5;

    @media (min-width: $breakpoint-navigation-threshold + 1) {
      clip: rect(0, 1000px, 1000px, -10px); /* Clip the top of the box-shadow off */
      position: absolute;
      top: calc(#{$spv-inner--medium * 4} - 1px);
    }

    @media (max-width: $breakpoint-navigation-threshold) {
      border: 0;
      box-shadow: none;
    }
  }

  .p-subnav__items--right {
    right: 0;
  }

  .p-subnav__item {
    display: block;
    white-space: nowrap;

    @media (max-width: $breakpoint-navigation-threshold) {
      padding: $spv-inner--small $grid-margin-width;
    }

    @media (min-width: $breakpoint-navigation-threshold) {
      padding: $spv-inner--medium $sph-inner;
    }

    &,
    &:active,
    &:focus,
    &:hover,
    &:visited {
      text-decoration: none;
    }
  }

  %subnav-item--light-theme {
    background-color: $colors--light-theme--background;

    &,
    &:active,
    &:focus,
    &:visited {
      color: $colors--light-theme--text-default;
    }

    &:hover {
      color: $colors--light-theme--text-hover;
    }

    &::before {
      @media (max-width: $breakpoint-navigation-threshold) {
        // separator color on small screens
        background: $colors--light-theme--border-default;
      }
    }
  }

  %subnav-item--dark-theme {
    background-color: $colors--dark-theme--background;

    &,
    &:active,
    &:focus,
    &:visited {
      color: $colors--dark-theme--text-default;
    }

    &:hover {
      color: $colors--dark-theme--text-hover;
    }

    &::before {
      @media (max-width: $breakpoint-navigation-threshold) {
        // separator color on small screens
        background: $colors--dark-theme--border-default;
      }
    }
  }
}

